--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,16 +930,23 @@
    "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
     "    <h4> Imparare Facendo</h4>\n",
-    "    \n",
-    "Scrivete un programma che calcoli la soluzione *y(t)* della ODE seguente, usando l'algoritmo `odeint`,\n",
+    "<OL>\n",
+    "<LI>\n",
+    "    Scrivete un programma che calcoli la soluzione *y(t)* della ODE seguente, usando l'algoritmo `odeint`,\n",
     "    $$\\frac{\\mathrm{d}y}{\\mathrm{d}t} =  -\\exp(-t)(10\\sin(10t)+\\cos(10t))$$\n",
     "     da $t=0$ a $t = 10$. Il valore iniziale &egrave; $y(0)=1$.<BR>\n",
     "    Mostrate graficamente la soluzione, valutandola nei punti $t=0$, $t=0.01$, $t=0.02$, ..., $t=9.99$, $t=10$.<BR>\n",
     "    Aiutino: una parte della soluzione $y(t)$ &egrave; presentata nella figura seguente.\n",
-    "</div>\n",
-    "\n",
-    "<div style= 'padding:20px 20px 20px 80px;'>\n",
     "    <img src=\"../Images/11_odeintsolution8to10.png\" alt=\"image\" />\n",
+    "</LI>\n",
+    "\n",
+    "<LI>\n",
+    "   Scrivete un programma che calcoli la soluzione $y(t)$ della ODE seguente ( con $\\mathrm{k},\\,\\mathrm{m},\\,\\mathrm{a}\\, >\\, 0$ &egrave; l'equazione del moto di un oscillatore armonico smorzato)\n",
+    "   $$\\frac{\\mathrm{d^2}y}{\\mathrm{d}t^2} = - \\frac{\\mathrm{k}}{\\mathrm{m}} y - \\mathrm{a} \\frac{\\mathrm{d}y}{\\mathrm{d}t}$$\n",
+    "    I valori iniziali sono $y(0)=1\\,m $, $\\mathrm{d}y/\\mathrm{d}t(0)=0.5\\,m/s$.<BR>\n",
+    "    Sperimentate con valori diversi di $\\,\\,\\,\\mathrm{k},\\,\\mathrm{m},\\,\\mathrm{a}$.<BR>\n",
+    "     Aiutino: $$\\frac{\\mathrm{d}y}{\\mathrm{d}t} = y_1(t),\\quad\\quad \\frac{\\mathrm{d^2}y}{\\mathrm{d}t^2} = \\frac{\\mathrm{d}y_1}{\\mathrm{d}t},\\quad\\quad y(0)=1\\,m,\\quad\\quad y_1(0)=0.5\\,m/s$$.\n",
+    "</LI>\n",
     "</div>"
    ]
   },
@@ -1313,8 +1320,9 @@
     "    <h4> Imparare Facendo</h4>\n",
     "    \n",
     "<OL>\n",
-    "<LI>Trovate massimi e minimi della funzione $f(x) = 2\\, x^3 + 3\\, x^2 - 12\\, x - 10$.\n",
-    "<LI>Trovate la distanza minima fra il punto del piano (3,2) e la retta y = 3x -1.\n",
+    "<LI>Trovate massimi e minimi della funzione $f(x) = 2\\, x^3 + 3\\, x^2 - 12\\, x - 10$.</LI>\n",
+    "<LI>Trovate la distanza minima fra il punto del piano (3,2) e la retta y = 3x -1.</LI>\n",
+    "<LI>Trovate il rettangolo di area massima con perimetro uguale a 100 $m$.</LI>\n",
     "</OL>\n",
     "</div>"
    ]
@@ -1420,7 +1428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
