--- a/ipynb/06extra_Come_Passare_Argomenti.ipynb
+++ b/ipynb/06extra_Come_Passare_Argomenti.ipynb
@@ -127,7 +127,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
