--- a/ipynb/07a_Esercizi.ipynb
+++ b/ipynb/07a_Esercizi.ipynb
@@ -202,44 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__14 - La posizione, al tempo t, di una palla che sia stata lasciata cadere con velocità iniziale nulla da una altezza $h_0$ è data da:\n",
-    "$$y = h_0 − \\frac{1}{2}\\, g\\, t^2$$ \n",
-    "dove $g = 9.81 m/s^2$. Supponiamo $h_0 = 10\\, m$. Trovate la sequenza di tempi a cui la palla completa ciascun intervallo di lunghezza mezzo metro, supponendo che la palla sia lasciata cadere a t=0. <br>\n",
-    "Suggerimento: create un array NumPy per y che va da 10 a 0 in incrementi di −0.5 usando la funzione arange.<br>\n",
-    "Salvate il vostro codice in una funzione. Una volta creati gli array y e t eseguite il comando `list(zip(t, y))`. Interpretate il risultato.__<BR>\n",
-    "(D.J.Pine - Introduction to Python for Science and Engineering)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__15 - Ricordando che la velocità media su un intervallo $\\Delta t$ è definita come $\\bar{v} = \\Delta y/\\Delta t$, trovate la velocità media per ciascun intervallo del problema precedente utilizzando gli array NumPy.<br>\n",
-    "Suggerimento: cosa sono gli array y[1:20] e y[0:19]?.<br> \n",
-    "Bonus 1: riuscite a immaginare un modo più elegante di rappresentare y[1:20]-y[0:19] che non fa riferimento esplicito al numero di elementi dell'array y, cioè che funzionerebbe per un array di lunghezza arbitraria?<br>\n",
-    "Bonus 2: Calcolate l'accelerazione in funzione del tempo usando la formula $\\bar{a} = \\Delta v/\\Delta t$. Esprimete i tempi a cui le velocità sono calcolate prendendo il punto medio degli intervalli dell'array dei tempi usato in precedenza. Spiegate il risultato ottenuto per le accelerazioni.__<BR>\n",
-    "(D.J.Pine - Introduction to Python for Science and Engineering)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__16 - Costruite una funzione `Cull(A,n)` in cui A è un array bidimensionale di numeri interi e n è un intero positivo. La funzione `Cull` deve sostituire tutti gli interi divisibili per `n` in A con 0 e restituire il risultato. Testate la funzione con la matrice:__\n",
+    "__14 - Costruite una funzione `Cull(A,n)` in cui A è un array bidimensionale di numeri interi e n è un intero positivo. La funzione `Cull` deve sostituire tutti gli interi divisibili per `n` in A con 0 e restituire il risultato. Testate la funzione con la matrice:__\n",
     "```\n",
     "D = np.array(\n",
     "[[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],\n",
@@ -270,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__17 - Data la matrice:__\n",
+    "__15 - Data la matrice:__\n",
     "$$\n",
     "R = \\left( \\begin{matrix}\n",
     "1 & 0 & 1 & -1 \\\\\n",
@@ -295,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__18 - Costruite una funzione column(A,n), dove A è un array a due dimensioni e n è un intero $\\ge$ 0,\n",
+    "__16 - Costruite una funzione column(A,n), dove A è un array a due dimensioni e n è un intero $\\ge$ 0,\n",
     "che restituisca la somma degli elementi della colonna di indice n della matrice A, se A ha almeno n+1 colonne, altrimenti restituisca zero.__<BR>\n",
     "__Verificate la vostra funzione sulla matrice:__\n",
     "$$\n",
@@ -320,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__19 - Risolvere il sistema di equazioni:__\n",
+    "__17 - Risolvere il sistema di equazioni:__\n",
     "$$x+2y +3z+4t=2$$ \n",
     "$$-x+3y-6z+8t=0$$\n",
     "$$x+ y-z +t=-1$$\n",
@@ -339,51 +302,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__20 - Scrivere una funzione che prenda come input due vettori, v1 e v2, di dimensione arbitraria, e restituisca la scomposizione di v1 in due vettori w1 e w2, il primo parallelo a v2 e il secondo ortogonale a v2.__<BR>\n",
+    "__18 - Create un array `A` contenente i valori da 1 a 10, in incrementi di 0.5. Calcolate l'esponenziale di ciascun elemento dell'array. Scrivete i valori di A e i corrispondenti esponenziali nel file \"test.txt\", una coppia per riga. L'header del file sia `\"    x         exp(x)\"`.__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__19 - Create un array `A` di dimensione (10,10) che riproduca la tavola pitagorica usando loop concatenati.__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__20 - Create una matrice di dimensione (10,10) che riproduca la tavola pitagorica usando `np.outer`.__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Esercizi per i pomeriggi di pioggia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__21 - La posizione, al tempo t, di una palla che sia stata lasciata cadere con velocità iniziale nulla da una altezza $h_0$ è data da:\n",
+    "$$y = h_0 − \\frac{1}{2}\\, g\\, t^2$$ \n",
+    "dove $g = 9.81 m/s^2$. Supponiamo $h_0 = 10\\, m$. Trovate la sequenza di tempi a cui la palla completa ciascun intervallo di lunghezza mezzo metro, supponendo che la palla sia lasciata cadere a t=0. <br>\n",
+    "Suggerimento: create un array NumPy per y che va da 10 a 0 in incrementi di −0.5 usando la funzione arange.<br>\n",
+    "Salvate il vostro codice in una funzione. Una volta creati gli array y e t eseguite il comando `list(zip(t, y))`. Interpretate il risultato.__<BR>\n",
+    "(D.J.Pine - Introduction to Python for Science and Engineering)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__22 - Ricordando che la velocità media su un intervallo $\\Delta t$ è definita come $\\bar{v} = \\Delta y/\\Delta t$, trovate la velocità media per ciascun intervallo del problema precedente utilizzando gli array NumPy.<br>\n",
+    "Suggerimento: cosa sono gli array y[1:20] e y[0:19]?.<br> \n",
+    "Bonus 1: riuscite a immaginare un modo più elegante di rappresentare y[1:20]-y[0:19] che non fa riferimento esplicito al numero di elementi dell'array y, cioè che funzionerebbe per un array di lunghezza arbitraria?<br>\n",
+    "Bonus 2: Calcolate l'accelerazione in funzione del tempo usando la formula $\\bar{a} = \\Delta v/\\Delta t$. Esprimete i tempi a cui le velocità sono calcolate prendendo il punto medio degli intervalli dell'array dei tempi usato in precedenza. Spiegate il risultato ottenuto per le accelerazioni.__<BR>\n",
+    "(D.J.Pine - Introduction to Python for Science and Engineering)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__23 - Scrivere una funzione che prenda come input due vettori, v1 e v2, di dimensione arbitraria, e restituisca la scomposizione di v1 in due vettori w1 e w2, il primo parallelo a v2 e il secondo ortogonale a v2.__<BR>\n",
     "__Hint: v1 = c\\*v2 + v3, con c = np.dot(v1,v2)/np.dot(v2,v2) e v3 = v1 - c\\*v2.__<BR>\n",
     "__Verificate che v3 &egrave; effetivamente ortogonale a v2.__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__21 - Create un array `A` contenente i valori da 1 a 10, in incrementi di 0.5. Calcolate l'esponenziale di ciascun elemento dell'array. Scrivete i valori di A e i corrispondenti esponenziali nel file \"test.txt\", una coppia per riga. L'header del file sia `\"    x         exp(x)\"`.__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__22 - Create un array `A` di dimensione (10,10) che riproduca la tavola pitagorica usando loop concatenati.__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__23 - Create una matrice di dimensione (10,10) che riproduca la tavola pitagorica usando `np.outer`.__"
    ]
   },
   {
@@ -411,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
