--- a/ipynb/10a_Esercizi.ipynb
+++ b/ipynb/10a_Esercizi.ipynb
@@ -153,7 +153,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__10 - Importate i dati contenuti in `../Data/parabolic_data.txt`. Fate un fit dei dati utilizzando la funzione $y(x) = a x^2 +b x +c$ con $a,\\,b,\\,c$ come parametri liberi.__\n",
+    "__10 - Trovate gli zeri, i massimi e i minimi della funzione:__\n",
+    "$$ f(x)= \\exp(-2 x)\\, \\sin\\left(\\frac{1}{x-2}\\right)$$ \n",
+    "__per $x$ in [1.8, 1.95].__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__11 - Importate i dati contenuti in `../Data/parabolic_data.txt`. Fate un fit dei dati utilizzando la funzione $y(x) = a x^2 +b x +c$ con $a,\\,b,\\,c$ come parametri liberi.__\n",
     "\n",
     "__Sovrapponete ai dati la funzione ottenuta dal fit.__"
    ]
@@ -169,7 +185,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__11 - Importate i dati contenuti in `../Data/decay_data.txt` (05_input-output-files.ipynb). I dati (falsi) rappresentano il numero di particelle $\\alpha$ rilevate al secondo vicino a un elemento radioattivo $X$. Il tempo delle misure è dato nella prima colonna in secondi a partire dall'inizio dell'esperimento. La seconda colonna fornisce il numero di particelle rilevate in un dato secondo.__\n",
+    "## Esercizi per i pomeriggi di pioggia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__12 - Importate i dati contenuti in `../Data/decay_data.txt` (05_input-output-files.ipynb). I dati (falsi) rappresentano il numero di particelle $\\alpha$ rilevate al secondo vicino a un elemento radioattivo $X$. Il tempo delle misure è dato nella prima colonna in secondi a partire dall'inizio dell'esperimento. La seconda colonna fornisce il numero di particelle rilevate in un dato secondo.__\n",
     "\n",
     "- __Fate un plot dei dati. Inserite i titoli opportuni per i due assi.__\n",
     "\n",
@@ -186,22 +209,6 @@
     "\n",
     "__Sovrapponete ai dati la funzione ottenuta dal fit.__<BR>\n",
     "__I dati sono stati generati con $R_0 = 1\\cdot 10^{14},\\,\\tau = 3000.$__ "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__12 - Trovate gli zeri, i massimi e i minimi della funzione:__\n",
-    "$$ f(x)= \\exp(-2 x)\\, \\sin\\left(\\frac{1}{x-2}\\right)$$ \n",
-    "__per $x$ in [1.8, 1.95].__"
    ]
   },
   {
@@ -229,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
