--- a/ipynb/Algorithm_My_sqrt.ipynb
+++ b/ipynb/Algorithm_My_sqrt.ipynb
@@ -183,7 +183,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
