--- a/ipynb/ParabolicFit.ipynb
+++ b/ipynb/ParabolicFit.ipynb
@@ -397,7 +397,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -411,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
