--- a/ipynb/Rotations_3D_sympy.ipynb
+++ b/ipynb/Rotations_3D_sympy.ipynb
@@ -286,7 +286,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
